--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href= "#">Norte</a></li>
-                    <li><a href= "#">Nordeste</a></li>
-                    <li><a href= "#">Centro-Oeste</a></li>
-                    <li><a href= "#">Sudeste</a></li>
-                    <li><a href= "#">Sul</a></li>
+                    <li><a href= "https://reverberainformatica.github.io/regioes_brasil/">Home</a></li>
+                    <li><a href= "https://reverberainformatica.github.io/projeto_gabrielly/">Nordeste</a></li>
+                    <li><a href= "https://reverberainformatica.github.io/projeto_juliano/">Centro-Oeste</a></li>
+                    <li><a href= "https://reverberainformatica.github.io/projeto_matheus/">Sudeste</a></li>
+                    <li><a href= "https://reverberainformatica.github.io/projeto_israel/">Sul</a></li>
                     
                 </ul>
             </nav>
