--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <nav>
                 <ul>
                     <li><a href= "https://reverberainformatica.github.io/regioes_brasil/">Home</a></li>
-                    <li><a href= "https://reverberainformatica.github.io/projeto_gabrielly/">Nordeste</a></li>
+                    <li><a href= "https://reverberainformatica.github.io/projeto_gabrielly02/">Nordeste</a></li>
                     <li><a href= "https://reverberainformatica.github.io/projeto_juliano/">Centro-Oeste</a></li>
-                    <li><a href= "https://reverberainformatica.github.io/projeto_matheus/">Sudeste</a></li>
-                    <li><a href= "https://reverberainformatica.github.io/projeto_israel/">Sul</a></li>
+                    <li><a href= "https://reverberainformatica.github.io/projeto_matheus02/">Sudeste</a></li>
+                    <li><a href= "https://reverberainformatica.github.io/projeto_emerson/">Sul</a></li>
                     
                 </ul>
             </nav>
